[tool.poetry]
name = "lasting-analysis"
version = "0.1.0"
description = "Project, to analyse data of children less then 5 years old"
authors = ["DanyloShmorhun <dronikd.danjok@gmail.com>"]
readme = "README.md"
packages = [{include = "lasting_analysis"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
numpy = "^2.1.3"
pandas = "^2.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
