[tool.poetry]
name = "lasting-analysis"
version = "0.1.0"
description = "Project, to analyse data of children less then 5 years old"
authors = ["DanyloShmorhun <dronikd.danjok@gmail.com>"]
readme = "README.md"
packages = [{include = "lasting_analysis"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.3"
pandas = "^2.2.3"
ipykernel = "^6.29.5"
PyYAML = "^6.0.2"
openpyxl = "^3.1.5"
matplotlib = "^3.9.2"
ace-tools = "^0.0"
drug-named-entity-recognition = "^2.0.4"
fuzzywuzzy = {extras = ["speedup"], version = "^0.18.0"}
nltk = "^3.9.1"
seaborn = "^0.13.2"
scipy = "^1.14.1"

[tool.poetry.group.dev.dependencies]
numpy = "^2.1.3"
pandas = "^2.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
